# fast-api-pizzaria

./: .env.example  Dockerfile  README.md  alembic.ini  dependencies.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1e8906b4cfc5_initial_commit.py  5ba1ac31ab46_adicionando_a_coluna_de_nome_do_usuario_.py  670fef58b810_changing_database_name.py  713c2e999c2e_itenspedido.py  8ba060abca55_adicionando_coluna_nome_usuario_no_.py  dd95123f2d48_versao_2.py  f510e52b5583_adicionando_a_coluna_de_itens_dentro_da_.py
core/: security.py
models/: models.py
routes/: autenticacao_rotas.py  pedidos_rotas.py
schemas/: schemas.py
templates/: index.html  orders.html
